--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,7 @@
 
 .titre{
     text-align: center;
-    font-size: x-large;
+    font-size: xx-large;
     padding: 20px;
     font-family:'Times New Roman', Times, serif
 }
@@ -70,6 +70,7 @@ li{
 
 .titre2{
     text-align:left;
+    font-size: xx-large;
 }
 
 .section{
@@ -77,3 +78,17 @@ li{
     padding-right: 100px;
 }
 
+footer{
+    background-color: rgb(43, 43, 43);
+    height: 350px;
+}
+
+.reseaux{
+    padding: 50px;
+    text-align: center;
+}
+
+.img3{
+    position: absolute;
+    left: 40%;
+}
