--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,7 @@
 
 .btn1{
     background-color: rgb(11, 165, 11);
+    border-radius: 25px;
 }
 
 .btn{
@@ -76,6 +77,7 @@ li{
 .section{
     padding-left: 100px;
     padding-right: 100px;
+    padding-bottom: 20px;
 }
 
 footer{
@@ -91,4 +93,9 @@ footer{
 .img3{
     position: absolute;
     left: 40%;
+}
+
+.copy{
+    text-align: center;
+    padding-top: 150px;
 }
